--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
               <div class="container">
                 <h2>Who am I ?</h1>
                 <blockquote class="white-text">
-                    Hello ! Welcome to my my personal website. My name is Kevin and 
+                    Hello ! Welcome to my personal website. My name is Kevin and 
                     I'm what you call a fullstack web and mobile developer.
 
                     I absolutely love programming and first started getting interested at a young age.
