added user experience

--- a/public/index.html
+++ b/public/index.html
@@ -393,9 +393,9 @@
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Links</h5>
             <ul>
-              <li><a target="_blank" class="white-text text-lighten-3" href="https://www.youtube.com/channel/UC4pNJwMuQNZPt3h2P9uKJZw">Youtube</a></li>
-              <li><a class="white-text text-lighten-3" href="https://github.com/kemicofa">Github</a></li>
-              <li><a class="white-text text-lighten-3" href="https://stackoverflow.com/users/3589092/kemicofa">StackOverflow</a></li>
+              <li><a target="_blank" class="text-lighten-3" href="https://www.youtube.com/channel/UC4pNJwMuQNZPt3h2P9uKJZw">Youtube</a></li>
+              <li><a class="text-lighten-3" href="https://github.com/kemicofa">Github</a></li>
+              <li><a class="text-lighten-3" href="https://stackoverflow.com/users/3589092/kemicofa">StackOverflow</a></li>
             </ul>
           </div>
         </div>
@@ -441,7 +441,7 @@
               </div>
           </div>
           <div class="modal-footer">
-            <button href="#!" id="send" type="submit" class="waves-effect waves-green btn">Send</button>
+            <button href="#!" id="send" type="submit" class=" green lighten-2 waves-effect waves-green btn">Send</button>
           </div>
         </form>
     <!-- end -->
