fixed some text

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                     I'm what you call a fullstack web and mobile developer.
 
                     I absolutely love programming and first started getting interested at a young age.
-                    My parents bought me a programming book for making games. It came with a cool CD where
+                    My parents bought me a programming book on how to make games. It came with a cool CD where
                     I had the opportunity to try and recreate space invader in some pseudo basic language (a mix between python and c). 
 
                     I've also been heavily committed to sports. I've practiced countless ones, but I'm most
